<resources>
    <string name="app_name">App Permissions</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_permission_detail">Permission Detail</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="package_name">Package:</string>
    <string name="version_name">Version:</string>
    <string name="search_app">Search app</string>
    <string name="search">Search</string>
    <string name="not_found_per_info">App own permission</string>

    <string name="title_activity_advance_filter">Advance Filter</string>
    <string name="and_filter">AND FILTER</string>
    <string name="or_filter">OR FILTER</string>

    <!-- Navigation drawer -->
    <string name="permission">Permission</string>
    <string name="Source">Source</string>
    <string name="Filter">Advance Filter</string>
    <string name="settings">Settings</string>
    <string name="Support">Support</string>

    <!-- Support -->
    <string name="change_log">ChangeLog</string>
    <string name="ok_label">OK</string>
    <string name="feedback">Feedback</string>
    <string name="user_guide">User guide</string>
    <string name="rate_app">Vote this app 5 star</string>
    <string name="share_app">Share this app</string>
    <string name="more_app">More app from me!</string>

    <!-- Setting -->
    <string name="show_system_app">Show system app</string>
    <string name="show_notification">Show notification</string>
    <string name="click_to_show_permission">Click to show permission</string>
    <string name="new_app">New app</string>

    <string name="can_not_open_app">Cant not open app</string>
    <string name="send_to">Send to</string>
</resources>
